kubernetes/noticias/db-noticias.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-noticias-pod
  labels:
    app: db-noticias
spec:
  containers:
  - name: db-noticias-container
    image: aluracursos/mysql-db:1
    ports:
      - containerPort: 3306
    
---

apiVersion: v1
kind: Service
metadata:
  name: db-noticias-svc
spec:
  selector:
    app: db-noticias
  ports:
  - port: 3306
