kubernetes/noticias/portal-noticias.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: portal-noticias
#   labels:
#     app: portal-noticias
# 
# spec:
#   nodeSelector:
#     node: node1
#   containers:
#   - name: portal-noticias-container
#     image: aluracursos/portal-noticias:1
#     env:
#       - name: IP_SISTEMA
#         value: http://192.168.99.106:30011
#     ports:
#       - containerPort: 8 0
        
#apiVersion: apps/v1
#kind: ReplicaSet
#metadata:
#  name: portal-noticias-replicaset
#spec:
#  selector:
#    matchLabels:
#      app: portal-noticias
#  replicas: 2
#  template:
#    metadata:
#      name: portal-noticias
#      labels:
#        app: portal-noticias
#    spec:
#      containers:
#        - name: portal-noticias-container
#          image: aluracursos/portal-noticias:1
#          ports:
#            - containerPort: 80
#          envFrom:
#            - configMapRef:
#                name: portal-config
                 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-noticias-depl
spec:
  selector:
    matchLabels:
      app: portal-noticias
  replicas: 1 
  template:
    metadata:
      labels:
        app: portal-noticias
    spec:
      containers:
      - name: portal-noticias-container
        image: aluracursos/portal-noticias:1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 80
            path: /
          periodSeconds: 10
          failureThreshold: 3
          initialDelaySeconds: 20
        
        readinessProbe:
          httpGet:
            port: 80
            path: /
          periodSeconds: 10
          failureThreshold: 5
          initialDelaySeconds: 3
        resources:
          requests:
            cpu: 10m
---

apiVersion: v1
kind: Service
metadata:
  name: portal-noticias-svc
spec:
  selector:
    app: portal-noticias
  ports:
  - targetPort: 80
    port: 9090
