kubernetes/noticias/sistema-noticias.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistema-noticias-ss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sistema-noticias
  template:
    metadata:
      labels:
        app: sistema-noticias
    spec:
      containers:
      - name: sistema-noticias-container
        image: aluracursos/sistema-noticias:1
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html/uploads
            name: imagens
          - mountPath: /tmp
            name: sessao
        livenessProbe:
          httpGet:
            port: 80
            path: /
          periodSeconds: 10
          failureThreshold: 3
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            port: 80
            path: /
          periodSeconds: 10
          failureThreshold: 5
          initialDelaySeconds: 3
        
      volumes:
        - name: imagens
          persistentVolumeClaim:
            claimName: imagens-pvc        
        - name: sessao
          persistentVolumeClaim:
            claimName: sessoes-pvc
#  serviceName: sistema-noticias-svc

      

#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: sistema-noticias-depl
#spec:
#  selector:
#    matchLabels:
#      app: sistema-noticias
#  template:
#    metadata:
#      labels:
#        app: sistema-noticias
#    spec:
#      containers:
#      - name: sistema-noticias-container
#        image: aluracursos/sistema-noticias:1
#        env:
#          - name: "HOST_DB"
#            valueFrom:
#              configMapKeyRef:
#                name: sistema-noticias-config
#                key: HOST_DB
#
#          - name: "USER_DB"
#            valueFrom:
#              configMapKeyRef:
#                name: sistema-noticias-config
#                key: USER_DB
#
#          - name: "PASS_DB"
#            valueFrom:
#              configMapKeyRef:
#                name: db-config
#                key: MYSQL_PASSWORD
#                
#          - name: "DATABASE_DB"
#            valueFrom:
#              configMapKeyRef:
#                name: db-config
#                key: MYSQL_DATABASE      
#        ports:
#          - containerPort: 80

---


apiVersion: v1
kind: Service
metadata:
  name: sistema-noticias-svc
spec:
  selector:
    app: sistema-noticias
  type: NodePort
  ports:
  - port: 80
    nodePort: 30011
